--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>TheBreakingbadApi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.kindpng.com/picc/m/190-1905790_heisenberg-drawing-breaking-bad-heisenberg-breaking-bad-logo.png">
 </head>
 <body>
   <app-root></app-root>
